syntax = "proto3";

package shortener;

service Link {
  rpc CreateLink(CreateLinkRequest) returns (LinkResponse);
  rpc ListLinks(ListLinksRequest) returns (ListLinksResponse);
  rpc FindLink(LinkRequest) returns (LinkResponse);
  rpc IncreaseVisit(LinkRequest) returns (LinkResponse);
}

message CreateLinkRequest {
  int32 user_id = 1;
  string url = 2;
  string hash = 3;
  int32 visits = 4;
}

message ListLinksRequest {
  int32 user_id = 1;
}

message ListLinksResponse {
  repeated LinkResponse links = 1;
}

message LinkRequest {
  string hash = 1;
}

message LinkResponse {
  int32 id = 1;
  int32 user_id = 2;
  string url = 3;
  string hash = 4;
  int32 visits = 5;
  string created_at = 6;
  string updated_at = 7;
  string last_visit = 8;
}

